adjust syntax to recent JDK
- omit types in new GenericObj<>
- use try(resource) {} when it makes sense
- mark unused exceptions
- make Version methods static
- suppress "possible static-method" warnings for methods of abstract classes